authenticate test primed

--- a/app/index.html
+++ b/app/index.html
@@ -12,11 +12,12 @@
 <body>
   <div class="container">
     <div class="a-list">
-      <div class="alert alert-danger">
+      <div class="alert">
         <a href="#" class="close" data-dismiss="alert">&times;</a>
         <span></span>
       </div>
       <ul class="list-group">
+        <li class="list-group-item"><span class="first">First Refactor</span> <input class="form-control x-small" id="focusedInput" type="password" placeholder="password"> <button class="btn btn-primary btn-large authenticate pull-right">Authenticate</button></li>
         <li class="list-group-item">Callback Hell <a href="#" class="btn btn-primary btn-large call-back pull-right">Load</a></li>
         <li class="list-group-item">Promises <a href="#" class="btn btn-primary btn-large promises pull-right">Load</a></li>
         <li class="list-group-item">Generators <a href="#" class="btn btn-primary btn-large generators pull-right">Load</a></li>
