--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
         <li class="list-group-item"><span class="first">First Refactor</span> <input class="x-small" type="password" placeholder="password"/> <button class="btn btn-primary btn-large authenticate pull-right">Authenticate</button></li>
         <li class="list-group-item"><span class="first">Callback Hell</span> <input class="x-small" type="password" placeholder="password"/> <button class="btn btn-primary btn-large call-back pull-right">Load</button></li>
         <li class="list-group-item"><span class="first">Promises</span> <input class="x-small" type="password" placeholder="password"/> <button class="btn btn-primary btn-large promises pull-right">Load</button></li>
-        <li class="list-group-item"><span class="first">Generators</span> <input class=":-small" type="password" placeholder="password"/> <button class="btn btn-primary btn-large generators pull-right">Load</button></li>
+        <li class="list-group-item"><span class="first">Generators</span> <input class="x-small" type="password" placeholder="password"/> <button class="btn btn-primary btn-large generators pull-right">Load</button></li>
       </ul>
       <ul class="list-group text-center">
           <li class="list-group-item"><a href="#" class="btn btn-primary btn-large clear">Clear</a></li>
